feat(메모리관리기법): 가상메모리접근 권한

--- a/docs/2.운영체제/5.메모리관리기법/5.가상메모리.md
+++ b/docs/2.운영체제/5.메모리관리기법/5.가상메모리.md
@@ -662,3 +662,410 @@ Invalid 페이지가 발생하는 경우들:
 ```
 
 **페이징 기법**은 현대 가상 메모리 시스템의 **핵심 메커니즘**으로, **효율적인 메모리 관리와 프로세스 보호**를 동시에 제공하는 중요한 기술입니다! 특히 **VA=<P,D>, PA=<F,D>의 정형화된 구조**는 하드웨어 MMU가 빠른 주소 변환을 수행할 수 있게 하는 핵심 원리입니다.
+
+
+## 프로세스 메모리 영역별 접근 권한
+
+**PCB에서 각 메모리 영역별로 R(Read), W(Write), X(Execute) 권한이 다르게 설정됩니다**:
+
+```
+📋 메모리 영역별 접근 권한 매트릭스
+
+┌─────────────────────────────────────────────────────┐
+│  메모리 영역     │  R(Read) │ W(Write) │ X(Execute) │
+│  ───────────────┼──────────┼──────────┼────────────│
+│  코드 영역       │    ✅    │    ❌    │     ✅     │
+│  (텍스트 세그먼트)│          │          │            │
+│  ───────────────┼──────────┼──────────┼────────────│
+│  데이터 영역     │    ✅    │   ✅/❌   │     ❌     │
+│  • 전역변수(RW) │    ✅    │    ✅    │     ❌     │
+│  • 문자열상수(R) │    ✅    │    ❌    │     ❌     │
+│  ───────────────┼──────────┼──────────┼────────────│
+│  힙 영역         │    ✅    │    ✅    │     ❌     │
+│  (동적 할당)     │          │          │            │
+│  ───────────────┼──────────┼──────────┼────────────│
+│  스택 영역       │    ✅    │    ✅    │     ❌     │
+│  (지역 변수)     │          │          │            │
+└─────────────────────────────────────────────────────┘
+
+보안 원칙:
+🛡️ W ⊕ X (Write XOR Execute): 쓰기와 실행 권한은 동시에 가질 수 없음
+🛡️ 코드 영역: 읽기/실행만 가능, 수정 불가
+🛡️ 데이터 영역: 읽기/쓰기만 가능, 실행 불가
+```
+
+## 32bit 가상 메모리 공간 구조
+
+**32bit Application VMS는 4GB이고 특별한 경우가 없다면 User Mode 2GB, Kernel Mode 2GB로 분할됩니다**.
+
+**VMS 영역은 앞에 user mode인 2GB 공간을 말합니다. 그리고 그 공간 중에서도 0번부터는 OS가 해당 영역을 사용합니다. 그래서 실제 사용할 수 있는 VMS 공간은 대략 1.8GB 정도 됩니다**.
+
+```
+🏗️ 32bit 가상 메모리 상세 구조
+
+전체 4GB 가상 주소 공간:
+┌─────────────────────────────────────────────────────┐
+│  0x00000000                                         │
+│  ┌─────────────────────────────────────────────┐   │
+│  │ User Mode 영역 (2GB)                        │   │
+│  │ ┌─────────────────────────────────────────┐ │   │
+│  │ │ OS 예약 영역 (~200MB)                   │ │   │
+│  │ │ • NULL 포인터 보호                      │ │   │
+│  │ │ • 시스템 DLL 로딩 공간                  │ │   │
+│  │ ├─────────────────────────────────────────┤ │   │
+│  │ │ 실제 프로세스 사용 가능 영역 (~1.8GB)   │ │   │
+│  │ │ ┌─────────────────────────────────────┐ │ │   │
+│  │ │ │ 코드 영역 (R-X)                    │ │ │   │
+│  │ │ │ • 실행 파일(.exe)                  │ │ │   │
+│  │ │ │ • 문자열 상수                      │ │ │   │
+│  │ │ ├─────────────────────────────────────┤ │ │   │
+│  │ │ │ 데이터 영역                        │ │ │   │
+│  │ │ │ • 전역 변수 (RW-)                  │ │ │   │
+│  │ │ │ • 정적 변수 (RW-)                  │ │ │   │
+│  │ │ ├─────────────────────────────────────┤ │ │   │
+│  │ │ │ 힙 영역 (RW-) ↓ 성장              │ │ │   │
+│  │ │ │ • malloc(), new 할당               │ │ │   │
+│  │ │ ├─────────────────────────────────────┤ │ │   │
+│  │ │ │        ... 빈 공간 ...              │ │ │   │
+│  │ │ ├─────────────────────────────────────┤ │ │   │
+│  │ │ │ 스택 영역 (RW-) ↑ 성장             │ │ │   │
+│  │ │ │ • 지역 변수, 함수 호출              │ │ │   │
+│  │ │ └─────────────────────────────────────┘ │ │   │
+│  │ └─────────────────────────────────────────┘ │   │
+│  └─────────────────────────────────────────────┘   │
+│  0x7FFFFFFF                                         │
+│  ┌─────────────────────────────────────────────┐   │
+│  │ Kernel Mode 영역 (2GB)                      │   │
+│  │ • 운영체제 코드                             │   │
+│  │ • 시스템 드라이버                           │   │
+│  │ • 하드웨어 추상화 계층                      │   │
+│  └─────────────────────────────────────────────┘   │
+│  0xFFFFFFFF                                         │
+└─────────────────────────────────────────────────────┘
+```
+
+## 권한 비트 구조와 chmod 명령어
+
+**그래서 이 페이지 테이블 좀 더 자세하게 보면 앞쪽 3bit에 권한 비트가 존재합니다. 실제로는 한 4bit 정도를 사용한다고 보면 되는데 예를 들어 0111 이렇게 보면**:
+
+```
+💻 권한 비트 구조 분석
+
+페이지 테이블 엔트리의 권한 비트:
+┌─────────────────────────────────────────────────────┐
+│  비트 위치:  │  3  │  2  │  1  │  0  │              │
+│  2의 거듭제곱: │ 2³  │ 2²  │ 2¹  │ 2⁰  │              │
+│  값:         │  8  │  4  │  2  │  1  │              │
+│  의미:       │ 예약│  R  │  W  │  X  │              │
+│  ───────────┼─────┼─────┼─────┼─────┤              │
+│  예시: 0111  │  0  │  1  │  1  │  1  │ = RWX (7)    │
+│  예시: 0101  │  0  │  1  │  0  │  1  │ = R-X (5)    │  
+│  예시: 0110  │  0  │  1  │  1  │  0  │ = RW- (6)    │
+└─────────────────────────────────────────────────────┘
+
+Linux chmod 명령어와의 관계:
+┌─────────────────────────────────────────────────────┐
+│  chmod 755 filename 의미:                           │
+│  ┌─────────┬─────────┬─────────┬─────────┐         │
+│  │ 파일타입│소유자(7)│그룹(5)  │기타(5)  │         │
+│  └─────────┴─────────┴─────────┴─────────┘         │
+│                                                     │
+│  소유자 권한 7 = 111₂ = RWX (읽기+쓰기+실행)       │
+│  그룹 권한   5 = 101₂ = R-X (읽기+실행)            │
+│  기타 권한   5 = 101₂ = R-X (읽기+실행)            │
+└─────────────────────────────────────────────────────┘
+
+일반적인 권한 조합:
+- 777 (RWX RWX RWX): 모든 권한 - 매우 위험!
+- 755 (RWX R-X R-X): 실행 파일의 일반적 권한
+- 644 (RW- R-- R--): 일반 파일의 기본 권한
+- 600 (RW- --- ---): 개인 파일 (소유자만 접근)
+- 444 (R-- R-- R--): 읽기 전용 파일
+```
+
+## DEP (Data Execution Prevention)
+
+**그래서 해당 데이터 영역에 실행 코드가 들어가면 안됩니다. 만약 그렇게 했다가는 보안 사고가 발생합니다. 그래서 운영체제들이 기본적으로 DEP(Data Execution Prevention)를 제공합니다**.
+
+**이게 무슨 뜻인가 하면 데이터를 담아야 할 영역에 코드를 집어넣어서 실행하는 것을 막겠다는 의미입니다**.
+
+```
+🛡️ DEP (Data Execution Prevention) 상세 분석
+
+전통적인 공격 시나리오 (DEP 이전):
+┌─────────────────────────────────────────────────────┐
+│  1️⃣ 버퍼 오버플로우 공격:                           │
+│     char buffer[100];                               │
+│     gets(buffer); // 위험한 함수!                   │
+│                                                     │
+│  2️⃣ 공격자가 buffer에 악성 코드 삽입:               │
+│     buffer = [악성 기계어 코드 + 리턴 주소 변조]    │
+│                                                     │
+│  3️⃣ 함수 리턴 시 악성 코드 실행:                    │
+│     return address → buffer의 악성 코드 주소        │
+│     → 원격 코드 실행 성공!                          │
+└─────────────────────────────────────────────────────┘
+```
+
+```
+DEP 방어 메커니즘:
+┌─────────────────────────────────────────────────────┐
+│  🔒 하드웨어 수준 보호:                             │
+│     • NX bit (AMD): No-eXecute                      │
+│     • XD bit (Intel): eXecute Disable              │
+│     • 페이지 테이블의 실행 권한 비트 제어           │
+│                                                     │
+│  🔒 운영체제 수준 보호:                             │  
+│     • Windows: DEP (Data Execution Prevention)     │
+│     • Linux: NX protection                         │
+│     • macOS: XN (eXecute Never) protection         │
+│                                                     │
+│  🔒 동작 방식:                                      │
+│     1. 데이터 영역(힙, 스택)의 실행 권한 제거       │
+│     2. 실행 시도 시 하드웨어 예외 발생              │
+│     3. 운영체제가 프로세스 즉시 종료                │
+└─────────────────────────────────────────────────────┘
+```
+
+```
+DEP 우회 공격과 추가 보안 기법:
+┌─────────────────────────────────────────────────────┐
+│  공격자의 DEP 우회 시도:                            │
+│  • ROP (Return-Oriented Programming)               │
+│  • JOP (Jump-Oriented Programming)                 │
+│  • 기존 코드 영역의 가젯 활용                       │
+│                                                     │
+│  추가 보안 기법:                                    │
+│  • ASLR (Address Space Layout Randomization)       │
+│  • Stack Canary (스택 보호)                        │
+│  • CFI (Control Flow Integrity)                    │
+│  • Intel CET (Control-flow Enforcement Technology) │
+└─────────────────────────────────────────────────────┘
+```
+
+## 동적 권한 변경
+
+**그래서 가상 메모리를 운영체제마다 제공되는 함수들을 이용해서 권한을 제어하거나 변경하는 것이 가능합니다. 그래서 실행 코드에 RX 있는 권한에 W 권한을 추가할 수 있습니다**.
+
+```
+🔧 동적 메모리 권한 변경 API
+
+Windows API:
+┌─────────────────────────────────────────────────────┐
+│  VirtualProtect() 함수:                             │
+│  BOOL VirtualProtect(                               │
+│    LPVOID lpAddress,        // 변경할 메모리 주소   │
+│    SIZE_T dwSize,           // 크기                 │
+│    DWORD flNewProtect,      // 새로운 권한          │
+│    PDWORD lpflOldProtect    // 이전 권한 저장       │
+│  );                                                 │
+│                                                     │
+│  권한 플래그:                                       │
+│  • PAGE_EXECUTE_READ (R-X)                          │
+│  • PAGE_EXECUTE_READWRITE (RWX) - 위험!            │
+│  • PAGE_READWRITE (RW-)                             │
+│  • PAGE_READONLY (R--)                              │
+└─────────────────────────────────────────────────────┘
+
+```
+
+```
+Linux API:
+┌─────────────────────────────────────────────────────┐
+│  mprotect() 함수:                                   │
+│  int mprotect(                                      │
+│    void *addr,              // 변경할 메모리 주소   │
+│    size_t len,              // 크기                 │
+│    int prot                 // 새로운 권한          │
+│  );                                                 │
+│                                                     │
+│  권한 플래그:                                       │
+│  • PROT_READ | PROT_EXEC (R-X)                     │
+│  • PROT_READ | PROT_WRITE | PROT_EXEC (RWX)        │
+│  • PROT_READ | PROT_WRITE (RW-)                     │
+│  • PROT_READ (R--)                                  │
+└─────────────────────────────────────────────────────┘
+
+```
+
+```
+실제 사용 예시 (정당한 용도):
+┌─────────────────────────────────────────────────────┐
+│  🔧 JIT (Just-In-Time) 컴파일러:                    │
+│     1. RW- 권한으로 메모리 할당                     │
+│     2. 동적으로 기계어 코드 생성                    │
+│     3. RWX → R-X로 권한 변경                        │
+│     4. 생성된 코드 실행                             │
+│                                                     │
+│  🔧 동적 로딩 라이브러리:                           │
+│     1. 라이브러리 코드를 메모리에 로드              │
+│     2. 재배치 정보 적용 (쓰기 필요)                 │
+│     3. 최종적으로 R-X 권한으로 변경                 │
+└─────────────────────────────────────────────────────┘
+```
+
+## 보안 위협과 대응
+
+**동적 할당된 메모리 영역에 이름을 넣으라고 했는데 거기에 특정 기계어를 타자로 쳐서 넣을 수 있을까? 가능하고 만약 해당 코드가 실행까지 이어지게 된다면 이런 것을 원격 실행 코드라고 합니다**.
+
+```
+🚨 코드 인젝션 공격과 방어
+
+공격 시나리오:
+┌─────────────────────────────────────────────────────┐
+│  1️⃣ 취약한 코드:                                    │
+│     char *name = malloc(256);                       │
+│     printf("이름을 입력하세요: ");                   │
+│     gets(name); // 경계 검사 없음!                  │
+│                                                     │
+│  2️⃣ 공격자 입력:                                    │
+│     "\x48\x31\xc0\x48\x89\xc7\x48\x89\xc6..."     │
+│     (기계어 코드를 문자열로 위장)                   │
+│                                                     │
+│  3️⃣ 공격 성공하면:                                  │
+│     • 시스템 명령 실행                              │
+│     • 권한 상승                                     │
+│     • 원격 쉘 획득                                  │
+└─────────────────────────────────────────────────────┘
+```
+
+```
+다층 방어 체계:
+┌─────────────────────────────────────────────────────┐
+│  🛡️ 1차 방어: DEP/NX                               │
+│     • 데이터 영역 실행 금지                         │
+│     • 하드웨어 수준 보호                            │
+│                                                     │
+│  🛡️ 2차 방어: ASLR
+│     • 메모리 주소 무작위화                          │
+│     • 공격자가 정확한 주소 예측 불가                │
+│                                                     │
+│  🛡️ 3차 방어: Stack Canary                         │
+│     • 스택 오버플로우 감지                          │
+│     • 함수 리턴 전 무결성 검사                      │
+│                                                     │
+│  🛡️ 4차 방어: CFI (Control Flow Integrity)         │
+│     • 프로그램 흐름 무결성 보장                     │
+│     • 비정상적인 점프/호출 차단                     │
+│                                                     │
+│  🛡️ 5차 방어: 안전한 코딩                          │
+│     • gets() → fgets() 사용                        │
+│     • strcpy() → strncpy() 사용                    │
+│     • 경계 검사, 입력 검증                          │
+└─────────────────────────────────────────────────────┘
+```
+
+## 현대적 메모리 보호 기법
+
+```
+🔐 Intel CET (Control-flow Enforcement Technology)
+
+Shadow Stack (그림자 스택):
+┌─────────────────────────────────────────────────────┐
+│  일반 스택        │  Shadow Stack                   │
+│  ─────────────   │  ─────────────                  │
+│  [지역 변수]     │                                 │
+│  [리턴 주소] ←───┼──→ [리턴 주소 사본]             │
+│  [이전 EBP]      │                                 │
+│                                                     │
+│  공격자가 리턴 주소를 변조해도:                     │
+│  • Shadow Stack의 사본과 비교 검증                 │
+│  • 불일치 시 프로세스 즉시 종료                     │
+│  • ROP/JOP 공격 원천 차단                          │
+└─────────────────────────────────────────────────────┘
+
+Indirect Branch Tracking (IBT):
+┌─────────────────────────────────────────────────────┐
+│  정상적인 간접 호출:                                │
+│  call [register]  →  정당한 함수 시작점             │
+│                                                     │
+│  공격적인 간접 호출:                                │
+│  call [register]  →  가젯 코드 중간 지점             │
+│                     (IBT가 차단!)                   │
+│                                                     │
+│  ENDBR32/ENDBR64 명령어:                            │
+│  • 간접 분기의 정당한 타겟임을 표시                 │
+│  • 컴파일러가 함수 시작점에 자동 삽입               │
+└─────────────────────────────────────────────────────┘
+```
+
+## 실제 운영체제별 구현
+
+```
+🖥️ 운영체제별 메모리 보호 구현
+
+Windows:
+┌─────────────────────────────────────────────────────┐
+│  • DEP (Data Execution Prevention)                  │
+│    - 하드웨어 DEP: NX/XD 비트 활용                  │
+│    - 소프트웨어 DEP: 예외 처리 체인 보호            │
+│                                                     │
+│  • ASLR (Address Space Layout Randomization)       │
+│    - 이미지 베이스 무작위화                         │
+│    - 힙/스택 위치 무작위화                          │
+│                                                     │
+│  • CFG (Control Flow Guard)                        │
+│    - 간접 호출 검증                                 │
+│    - 비정상적인 제어 흐름 차단                      │
+└─────────────────────────────────────────────────────┘
+
+Linux:
+┌─────────────────────────────────────────────────────┐
+│  • NX Protection                                    │
+│    - 페이지 테이블의 NX 비트 활용                   │
+│    - execstack/noexecstack 링커 옵션                │
+│                                                     │
+│  • PIE (Position Independent Executable)           │
+│    - 실행 파일 위치 무작위화                        │
+│    - 전체 주소 공간 ASLR                            │
+│                                                     │
+│  • Stack Canary (GCC)                              │
+│    - -fstack-protector 옵션                        │
+│    - 함수 프롤로그/에필로그에 보호 코드 삽입        │
+└─────────────────────────────────────────────────────┘
+
+macOS:
+┌─────────────────────────────────────────────────────┐
+│  • XN (eXecute Never) Protection                    │
+│    - ARM64의 XN 비트 활용                           │
+│    - 모든 데이터 페이지 기본 실행 금지              │
+│                                                     │
+│  • Pointer Authentication (Apple Silicon)          │
+│    - 함수 포인터에 암호화 서명 추가                 │
+│    - 포인터 변조 시 즉시 감지                       │
+│                                                     │
+│  • Kernel ASLR                                      │
+│    - 커널 주소도 무작위화                           │
+│    - 커널 익스플로잇 난이도 증가                    │
+└─────────────────────────────────────────────────────┘
+```
+
+## 보안 우회 기법과 대응
+
+⚔️ 공격과 방어의 군비 경쟁
+
+전통적 공격 → 방어 → 새로운 공격 → 새로운 방어:
+
+1세대: 버퍼 오버플로우
+├─ 방어: Stack Canary, DEP
+└─ 우회: ROP (Return-Oriented Programming)
+
+2세대: ROP 공격  
+├─ 방어: ASLR, CFI
+└─ 우회: JIT-ROP, Blind ROP
+
+3세대: 고급 ROP
+├─ 방어: CET, Intel MPX
+└─ 우회: 취약점 체이닝, 논리적 결함 공격
+
+4세대: 하드웨어 기반 공격
+├─ 방어: 하드웨어 보안 모듈, TEE
+└─ 우회: 사이드 채널, 물리적 공격
+
+미래: AI 기반 공격/방어
+├─ 공격: 자동화된 익스플로잇 생성
+└─ 방어: 머신러닝 기반 이상 탐지
+
+**메모리 구조와 접근 권한** 개념은 현대 컴퓨터 보안의 **핵심 기반**입니다. 특히 **DEP와 권한 비트 시스템**은 **다양한 공격으로부터 시스템을 보호하는 1차 방어선** 역할을 합니다.
+
+**W ⊕ X (Write XOR Execute) 원칙**은 현재도 **모든 보안 시스템의 기본 철학**으로, 메모하신 내용이 **현대 사이버 보안의 근간을 이루는 중요한 개념들**임을 보여줍니다!
