feat(네트워크): 추가 설명 라우터

--- a/docs/3.네트워크기초/2.인터넷기반네트워크/3.스위치가하는일과비용.md
+++ b/docs/3.네트워크기초/2.인터넷기반네트워크/3.스위치가하는일과비용.md
@@ -232,4 +232,238 @@ ISP 라우터 2 (203.0.113.10)
 4. 최적 경로로 전달
 ```
 
-이처럼 **네트워크는 실제로 고속도로와 매우 유사한 구조**로 동작하며, **각 라우터가 교차로 역할을 하면서 최적의 경로를 선택**하여 데이터를 전달하는 지능적인 시스템입니다.
+이처럼 **네트워크는 실제로 고속도로와 매우 유사한 구조**로 동작하며, **각 라우터가 교차로 역할을 하면서 최적의 경로를 선택**하여 데이터를 전달하는 지능적인 시스템입니다.  
+
+## 라우터(Router)의 핵심 역할
+
+### L2 스위치 vs 라우터의 근본적 차이
+
+```
+L2 스위치 (같은 네트워크 내):
+PC A (192.168.1.10) ──┐
+                      ├── L2 Switch ──> PC C (192.168.1.30)
+PC B (192.168.1.20) ──┘
+- MAC 주소 기반 스위칭
+- 같은 IP 대역 내에서만 동작
+- 브로드캐스트 도메인 하나
+
+라우터 (서로 다른 네트워크 간):
+회사 LAN (192.168.1.x) ── Router ── 인터넷 (Public IP)
+집 LAN (192.168.0.x) ── Router ── 인터넷 (Public IP)
+- IP 주소 기반 라우팅
+- 서로 다른 네트워크 연결
+- 브로드캐스트 도메인 분리
+```
+
+### 라우터의 주요 역할
+
+### 1. 서로 다른 네트워크 간 연결 (Inter-network)
+
+```
+라우터가 없다면:
+┌─────────────────┐    ┌─────────────────┐
+│ 네트워크 A      │    │ 네트워크 B      │
+│ 192.168.1.x     │    │ 10.0.0.x        │
+│                 │ ?? │                 │
+└─────────────────┘    └─────────────────┘
+→ 서로 통신 불가능
+
+라우터가 있으면:
+┌─────────────────┐    ┌─────────────────┐
+│ 네트워크 A      │    │ 네트워크 B      │
+│ 192.168.1.x     │────│ 10.0.0.x        │
+│                 │Router│                │
+└─────────────────┘    └─────────────────┘
+→ 서로 통신 가능
+```
+
+### 2. IP 주소 기반 경로 결정 (L3 라우팅)
+
+```
+라우팅 테이블 예시:
+┌──────────────────┬──────────────┬─────────────┐
+│ 목적지 네트워크  │ 게이트웨이   │ 인터페이스  │
+├──────────────────┼──────────────┼─────────────┤
+│ 192.168.1.0/24   │ 직접연결     │ eth0        │
+│ 10.0.0.0/8       │ 10.0.0.1     │ eth1        │
+│ 0.0.0.0/0        │ 203.0.113.1  │ eth2        │
+└──────────────────┴──────────────┴─────────────┘
+
+동작 과정:
+1. 패킷의 목적지 IP 확인
+2. 라우팅 테이블에서 최적 경로 검색
+3. 해당 인터페이스로 패킷 전달
+4. 다음 홉(Next Hop)으로 라우팅
+```
+
+### 3. NAT (Network Address Translation) 수행
+
+```
+사설 IP → 공인 IP 변환:
+
+내부 네트워크:
+PC1: 192.168.1.10
+PC2: 192.168.1.20
+PC3: 192.168.1.30
+        ↓
+     Router (NAT)
+        ↓
+외부 인터넷: 203.0.113.100 (공인 IP 1개)
+
+NAT 테이블:
+┌─────────────────┬─────────────────┬──────────┐
+│ 내부 IP:Port    │ 외부 IP:Port    │ 프로토콜 │
+├─────────────────┼─────────────────┼──────────┤
+│ 192.168.1.10:80 │ 203.0.113.100:1024 │ TCP  │
+│ 192.168.1.20:443│ 203.0.113.100:1025 │ TCP  │
+└─────────────────┴─────────────────┴──────────┘
+```
+
+### 4. 브로드캐스트 도메인 분리
+
+```
+L2 스위치만 있는 경우:
+모든 기기가 하나의 브로드캐스트 도메인
+┌─────────────────────────────────────────┐
+│  PC1 ── Switch ── PC2 ── Switch ── PC3  │
+│  └────── 브로드캐스트 전체 전파 ──────┘  │
+└─────────────────────────────────────────┘
+→ 네트워크 효율성 저하
+
+라우터로 분리한 경우:
+┌─────────────┐    Router    ┌─────────────┐
+│ 도메인 A    │              │ 도메인 B    │
+│ PC1─Switch  │              │ Switch─PC3  │
+│    ─PC2     │              │    ─PC4     │
+└─────────────┘              └─────────────┘
+→ 브로드캐스트 격리, 성능 향상
+```
+
+### 실제 네트워크에서의 라우터 역할
+
+### 회사 네트워크 구성 예시
+
+```
+인터넷 (Public Network)
+        │
+    ┌───▼───┐
+    │Router │ ← 여기가 핵심!
+    │(Gateway)│
+    └───┬───┘
+        │
+┌───────▼───────┐
+│ L2 Distribution│
+│    Switch      │
+└───────┬───────┘
+        │
+    ┌───▼───┐
+    │L2 Access│
+    │Switch  │
+    └───┬───┘
+        │
+    ┌───▼───┐
+    │  PC   │
+    └───────┘
+
+라우터의 구체적 역할:
+1. 회사 내부망(192.168.x.x) ↔ 인터넷 연결
+2. 방화벽 기능으로 보안 제어
+3. DHCP로 IP 주소 자동 할당
+4. VPN 연결 지원
+5. QoS로 트래픽 우선순위 관리
+```
+
+### 가정용 공유기 = 라우터 + L2 스위치 통합
+
+```
+가정용 공유기 내부 구조:
+┌─────────────────────────────────────────┐
+│            공유기(라우터)               │
+│  ┌─────────────┐    ┌─────────────────┐ │
+│  │   Router    │    │  L2 Switch      │ │
+│  │   기능      │    │  (4포트)        │ │
+│  │ - NAT       │    │ 1 2 3 4         │ │
+│  │ - DHCP      │    │ ● ● ● ●         │ │
+│  │ - 방화벽    │    │                 │ │
+│  └─────────────┘    └─────────────────┘ │
+│         │                     │          │
+│      WAN포트              LAN포트         │
+└─────────┼─────────────────────┼──────────┘
+          │                     │
+      인터넷 연결           PC/기기 연결
+```
+
+### L2 스위치들이 모인 후 라우터가 필요한 이유
+
+### 네트워크 확장성의 한계
+
+L2만으로는 해결 안 되는 문제:
+
+1. IP 대역 관리:
+   L2 Distribution Switch까지는 같은 IP 대역
+   → 192.168.1.1 ~ 192.168.1.254 (253개 제한)
+   → 더 많은 기기 연결 시 IP 부족
+
+2. 브로드캐스트 스톰:
+   모든 기기가 같은 브로드캐스트 도메인
+   → ARP, DHCP 요청이 전체 네트워크에 전파
+   → 네트워크 성능 저하
+
+3. 보안 격리:
+   L2 스위치는 MAC 기반만 동작
+   → 부서별, 용도별 네트워크 분리 어려움
+
+4. 외부 연결:
+   인터넷이나 다른 건물과 연결 불가
+   → 폐쇄적 네트워크만 가능
+
+### 라우터가 해결하는 방식
+
+```
+라우터 도입 후:
+
+1. 다중 IP 대역 관리:
+┌─────────────────────────────────────────┐
+│ 1층: 192.168.1.x (일반 직원)           │
+│ 2층: 192.168.2.x (개발팀)              │
+│ 3층: 192.168.3.x (경영진)              │
+│ DMZ: 10.0.0.x (서버존)                 │
+└─────────────────────────────────────────┘
+
+2. 보안 정책 적용:
+- 경영진 네트워크 → 모든 접근 허용
+- 개발팀 네트워크 → 서버존만 접근 허용  
+- 일반 직원 → 인터넷만 접근 허용
+
+3. 인터넷 연결:
+내부망 → 라우터 → ISP → 인터넷
+
+4. 다른 지사와 연결:
+서울 본사 → VPN → 부산 지사
+```
+
+### 정리: 각 계층의 역할 분담
+
+```
+네트워크 계층별 역할:
+
+End Device (PC):
+- 데이터 생성/소비
+- 애플리케이션 실행
+
+L2 Access Switch:
+- 같은 층/부서 내 기기 연결
+- MAC 주소 기반 스위칭
+
+L2 Distribution Switch:  
+- 여러 Access Switch 통합
+- VLAN으로 논리적 분리
+
+Router (L3):
+- 서로 다른 네트워크 연결 ← 핵심!
+- 인터넷 게이트웨이 역할
+- 보안 및 정책 적용
+- IP 기반 라우팅
+```
+
+**결론적으로 라우터는 "서로 다른 네트워크를 연결하고, 인터넷으로 나가는 관문 역할"을 합니다.** L2 스위치들이 아무리 많이 연결되어도 **같은 네트워크 내에서만 통신 가능**하지만, **라우터가 있어야 비로소 다른 네트워크나 인터넷과 통신**할 수 있습니다!
