feat(네트워크): Encapsulation

--- a/docs/3.네트워크기초/L3수준에서외울것/2.packet.md
+++ b/docs/3.네트워크기초/L3수준에서외울것/2.packet.md
@@ -279,3 +279,259 @@ Wireshark 사용 시 고려사항:
 ```
 
 이렇게 **Packet은 네트워크 통신의 기본 단위**이며, **MTU 제약으로 인한 분할과 재조립**, 그리고 **Wireshark 같은 도구를 통한 실제 분석**을 통해 네트워크 동작을 깊이 있게 이해할 수 있습니다!
+
+
+### Encapsulation (인캡슐레이션)
+
+### Encapsulation의 기본 개념
+
+**Packet에 대해 말할 때 항상 따라다니는 용어가 있습니다. 그게 Encapsulation(인캡슐레이션)입니다.**
+
+**뭐 특별한 것은 아니고 우리가 택배를 보낼 때 택배 박스에 전달할 물건을 넣고 택배 박스를 포장합니다. 이러한 과정이 Encapsulation입니다. 마치 러시아 전통 목각 인형인 마트료시카 인형처럼 큰 인형 안에 작은 인형이 나오고 그 인형 안에 또 작은 인형이 나오는 것처럼.**
+
+```
+마트료시카 인형 vs 네트워크 Encapsulation:
+
+마트료시카 인형:
+┌─────────────────────────────────┐
+│     가장 큰 인형 (L2)          │
+│  ┌───────────────────────────┐  │
+│  │    중간 인형 (L3)         │  │
+│  │  ┌─────────────────────┐  │  │
+│  │  │   작은 인형 (L4)    │  │  │
+│  │  │  ┌───────────────┐  │  │  │
+│  │  │  │ 가장 작은 인형│  │  │  │
+│  │  │  │   (실제 데이터)│  │  │  │
+│  │  │  └───────────────┘  │  │  │
+│  │  └─────────────────────┘  │  │
+│  └───────────────────────────┘  │
+└─────────────────────────────────┘
+
+네트워크 Encapsulation:
+┌─────────────────────────────────┐
+│      Frame (L2)                │
+│  ┌───────────────────────────┐  │
+│  │     IP Packet (L3)        │  │
+│  │  ┌─────────────────────┐  │  │
+│  │  │  TCP Segment (L4)   │  │  │
+│  │  │  ┌───────────────┐  │  │  │
+│  │  │  │   HTTP Data   │  │  │  │
+│  │  │  │  (실제 웹페이지)│  │  │  │
+│  │  │  └───────────────┘  │  │  │
+│  │  └─────────────────────┘  │  │
+│  └───────────────────────────┘  │
+└─────────────────────────────────┘
+```
+
+### Encapsulation의 보안적 의미
+
+### 데이터 은닉 (Data Hiding)
+
+**즉 이렇게 택배 박스로 포장을 했다는 것은 어떤 박스라는 단위로 데이터를 단위화했다는 것이고 이 포장을 통해서 이 보낼 물건이 어떤 물건일지 모르지만 예를 들어 책을 그냥 보내면 누구나 책인 줄 알지만 이걸 박스에 담아서 포장하면 해당 물건인 책이 실질적으로 보이지 않기 때문에 알 수 없습니다.**
+
+```
+택배 포장 vs 네트워크 Encapsulation 보안:
+
+택배 예시:
+포장 전: 📖 (누구나 책인 것을 알 수 있음)
+    ↓ 포장
+포장 후: 📦 (내용물을 알 수 없음)
+
+네트워크 예시:
+원본 데이터: "사용자 비밀번호: mypassword123"
+    ↓ L7 → L4 (암호화)
+SSL 암호화: "A$#kM9@xZq&8mN*vB2..."
+    ↓ L4 → L3 (TCP 헤더 추가)
+TCP 세그먼트: [TCP Header][암호화된 데이터]
+    ↓ L3 → L2 (IP 헤더 추가)  
+IP 패킷: [IP Header][TCP Header][암호화된 데이터]
+    ↓ L2 → L1 (Ethernet 헤더 추가)
+Ethernet 프레임: [Eth Header][IP Header][TCP Header][암호화된 데이터][FCS]
+
+각 계층에서의 보안 효과:
+- L2: MAC 주소만 보임, 상위 내용 숨겨짐
+- L3: IP 주소만 보임, TCP 내용 숨겨짐  
+- L4: 포트만 보임, 실제 데이터 숨겨짐
+- L7: 암호화로 실제 내용 완전 보호
+```
+
+**이 포장이라는 행위가 보안적으로 봤을 때 실제 보이지 않습니다. 어떤 단위 안에 집어넣어서 보지 못하게 막는다라는 의도가 포함되어 있습니다.**
+
+### 네트워크 Encapsulation 구조
+
+### 계층별 Encapsulation 과정
+
+**그래서 이 Encapsulation을 네트워크에서 보게 된다면:**
+
+```
+<─────────── Frame ─────────────────────────────────>
+┌─────────┬─────────────────────────────────────────┐
+│   L2    │                                         │
+│ Header  │              Payload #1                 │
+│         │  ┌───────────┬─────────────────────────┐ │
+│         │  │    L3     │                         │ │
+│         │  │ IP Header │       Payload #2        │ │
+│         │  │           │  ┌─────────┬──────────┐ │ │
+│         │  │           │  │   L4    │          │ │ │
+│         │  │           │  │ Header  │Payload #3│ │ │
+│         │  │           │  │         │          │ │ │
+│         │  │           │  └─────────┴──────────┘ │ │
+│         │  └───────────┴─────────────────────────┘ │
+└─────────┴─────────────────────────────────────────┘
+```
+
+**그래서 가장 바깥에 있는 포장을 Frame이라고 합니다. 그래서 이 L2 Frame 안에 L3 IP packet이 오게 됩니다.**
+
+### 포함 관계의 명확한 이해
+
+**즉, L3 IP Packet 전체가 L2 Frame의 payload가 되는 것입니다. L2 헤더를 뜯어보면 L3 packet이 나오게 되고 이걸 다시 한 번 더 뜯어보면 L3 payload에 TCP 헤더와 payload가 들어있게 되는 것입니다.**
+
+```
+실제 데이터 전송 과정:
+
+송신 측 (Encapsulation):
+사용자 데이터: "Hello World"
+    ↓ L7→L4 처리
+TCP 세그먼트: [TCP Header]["Hello World"]
+    ↓ L4→L3 처리  
+IP 패킷: [IP Header][TCP Header]["Hello World"]
+    ↓ L3→L2 처리
+Ethernet 프레임: [Eth Header][IP Header][TCP Header]["Hello World"][FCS]
+    ↓ L2→L1 처리
+물리적 신호: 전기신호로 변환되어 케이블로 전송
+
+수신 측 (Decapsulation):
+물리적 신호 수신
+    ↓ L1→L2 처리
+Ethernet 프레임 해석: [Eth Header] 제거 → IP 패킷 추출
+    ↓ L2→L3 처리
+IP 패킷 해석: [IP Header] 제거 → TCP 세그먼트 추출
+    ↓ L3→L4 처리
+TCP 세그먼트 해석: [TCP Header] 제거 → 데이터 추출
+    ↓ L4→L7 처리
+최종 데이터: "Hello World" 복원
+```
+
+### 계층별 데이터 단위와 한계
+
+### TCP 이후의 구조 변화
+
+**이러한 구조이기 때문에 위에서 러시아 인형을 언급한 것입니다. (TCP의 단위 데이터는 segment입니다) 그러면 L7까지 계속 뜯으면 나오는 것인가 하면 그렇지는 않습니다. TCP를 넘어가면 그 뒤에는 스트림이라고 해서 다른 형식을 논하게 됩니다.**
+
+```
+계층별 데이터 단위 정리:
+
+L1 (Physical):     Bit/Signal
+L2 (Data Link):    Frame
+L3 (Network):      Packet  
+L4 (Transport):    Segment (TCP) / Datagram (UDP)
+L5+ (Session~):    Stream / Message / Data
+
+L4에서의 분기점:
+┌─────────────────────────────────────────┐
+│              L4 이후의 처리              │
+├─────────────────┬───────────────────────┤
+│ TCP 기반        │ UDP 기반              │
+│ ├─ Stream 방식  │ ├─ Message 방식       │
+│ ├─ 연속된 데이터│ ├─ 개별 메시지        │
+│ ├─ HTTP, SSH    │ ├─ DNS, DHCP          │
+│ └─ 순서 보장    │ └─ 독립적 전송        │
+└─────────────────┴───────────────────────┘
+
+TCP Stream의 특성:
+- 바이트 스트림: 경계가 없는 연속된 데이터
+- 순서 보장: 보낸 순서대로 도착
+- 흐름 제어: 수신 속도에 맞춰 조절
+- 오류 검출: 손실 패킷 재전송
+```
+
+### 실제 애플리케이션에서의 스트림 처리
+
+```
+HTTP 통신 예시:
+
+클라이언트가 웹페이지 요청:
+GET /index.html HTTP/1.1
+Host: www.example.com
+...
+
+이 요청이 TCP 스트림으로 전송:
+┌─────────────────────────────────────────┐
+│  TCP Stream (연속된 바이트)             │
+│  47 45 54 20 2F 69 6E 64 65 78 2E 68... │
+│  G  E  T     /  i  n  d  e  x  .  h ... │
+└─────────────────────────────────────────┘
+
+TCP는 이를 여러 세그먼트로 분할:
+Segment 1: [TCP Header][GET /index.ht]
+Segment 2: [TCP Header][ml HTTP/1.1\r\n]  
+Segment 3: [TCP Header][Host: www.exa]
+...
+
+수신 측에서 스트림 재조립:
+각 세그먼트의 TCP 헤더 제거 → 순서대로 합쳐서 → 원본 HTTP 요청 복원
+```
+
+### Decapsulation (디캡슐레이션)
+
+**그래서 이렇게 포장을 뜯는 행위를 Decapsulation(디캡슐레이션)이라고 합니다.**
+
+### 라우터와 스위치에서의 Decapsulation
+
+```
+네트워크 장비별 처리 수준:
+
+L2 스위치 (Switch):
+수신: [Eth Header][IP Packet][FCS]
+    ↓ L2 Decapsulation  
+처리: Ethernet Header만 확인 (MAC 주소)
+    ↓ L2 Encapsulation (다른 포트용)
+송신: [새 Eth Header][IP Packet][새 FCS]
+
+L3 라우터 (Router):  
+수신: [Eth Header][IP Header][TCP Segment][FCS]
+    ↓ L2 Decapsulation
+처리 단계 1: Ethernet Header 제거
+    ↓ L3 Decapsulation
+처리 단계 2: IP Header 확인 (목적지 IP)
+    ↓ 라우팅 테이블 검색
+    ↓ L3 Encapsulation (새 네트워크용)
+송신 준비: [새 IP Header][TCP Segment]
+    ↓ L2 Encapsulation (출력 인터페이스용)
+송신: [새 Eth Header][새 IP Header][TCP Segment][FCS]
+
+L4 로드밸런서:
+수신부터 L4까지 모든 헤더 확인 후 재캡슐화
+```
+
+### 종단간(End-to-End) 완전한 Decapsulation
+
+```
+최종 목적지에서의 완전한 처리:
+
+웹서버에서 HTTP 요청 처리:
+물리적 수신: 전기신호
+    ↓ L1→L2
+Ethernet 처리: MAC 주소 확인, 헤더 제거
+    ↓ L2→L3  
+IP 처리: 목적지 IP 확인, 헤더 제거
+    ↓ L3→L4
+TCP 처리: 포트 확인, 순서 재조립, 헤더 제거
+    ↓ L4→L7
+HTTP 처리: 실제 웹 요청 내용 파싱
+    ↓
+웹 애플리케이션: "GET /index.html" 요청 처리
+
+응답도 역순으로 Encapsulation:
+웹 애플리케이션: HTML 페이지 생성
+    ↓ L7→L4
+HTTP 응답: [HTTP Header][HTML Content]
+    ↓ L4→L3  
+TCP 캡슐화: [TCP Header][HTTP Response]
+    ↓ L3→L2
+IP 캡슐화: [IP Header][TCP Segment]
+    ↓ L2→L1
+Ethernet 캡슐화: [Eth Header][IP Packet][FCS]
+```
+
+이렇게 **Encapsulation과 Decapsulation은 네트워크 통신의 핵심 메커니즘**이며, **각 계층에서 필요한 정보만 확인하고 나머지는 상위/하위 계층에 위임**하는 **계층화된 설계의 핵심 원리**를 보여줍니다!
