--- a/docs/3.네트워크기초/5.L4수준에서외울것/5.TCP연결이라는착각.md
+++ b/docs/3.네트워크기초/5.L4수준에서외울것/5.TCP연결이라는착각.md
@@ -177,4 +177,106 @@ TCP 타이머 종류:
 
 이러한 **TCP의 재전송 메커니즘과 논리적 연결 특성**을 이해하면 **네트워크 불안정 환경에서도 안정적인 애플리케이션**을 설계할 수 있습니다.
 
-그래서 이 연결은 사실 End-Point의 주관적 판단에 불과하다.
+## TCP 연결의 주관적 특성과 보안 한계
+
+그래서 이 **연결은 사실 End-Point 간의 주관적 판단에 불과**하다. TCP 연결에서 **연결을 시작하는 주체와 종료하는 주체가 모두 일반적으로 클라이언트측**이다. 이는 연결의 주도권이 한쪽에 집중되어 있음을 의미한다.
+
+그래서 **서버측에서 SYN+ACK를 전송하고 클라이언트로부터 응답을 받으면 그 순간 연결되었다고 믿게 된다**. 하지만 이는 단순한 추정일 뿐, 실제 상대방의 상태나 중간 네트워크 상황을 보장하지 않는다. 그래서 **TCP의 연결이라고 하는 것에는 근본적인 보안 취약점이 존재**한다고 말한다.
+
+```
+TCP 연결의 주관적 판단:
+
+Client 관점:
+┌─────────────────────────────────────────────────┐
+│ SYN+ACK 수신 → "연결됨!" (주관적 판단)           │
+│ 실제로는 서버 상태 확신 불가                     │
+│ 중간 네트워크 상태 변화 감지 불가                │
+└─────────────────────────────────────────────────┘
+
+Server 관점:  
+┌─────────────────────────────────────────────────┐
+│ SYN 수신 → "연결 요청 받음!" (주관적 판단)       │
+│ 클라이언트가 정말 존재하는지 확신 불가           │
+│ 위조된 IP 주소일 가능성 배제 못함                │
+└─────────────────────────────────────────────────┘
+
+문제점:
+- 양측 모두 상대방 상태를 추측할 뿐
+- 실제 물리적/논리적 연결 상태와 무관
+- 보안 검증 없이 신뢰 관계 형성
+```
+
+## 보안의 3대 요소와 TCP의 취약점
+
+**보안의 3대 요소는 기밀성, 무결성, 가용성**을 말한다:
+
+- **기밀성(Confidentiality)**: 누구나 네트워크 패킷을 도청할 수 있다
+- **무결성(Integrity)**: 다른 사람이 송신자 신원을 쉽게 위조할 수 있다
+- **가용성(Availability)**: 서비스 거부 공격으로 연결을 쉽게 차단할 수 있다
+
+**이 세 가지 보안 요소가 모두 부족**하다. 그래서 사실 **이 연결이라는 것을 과도하게 신뢰해서는 안 된다**.
+
+```
+보안 3대 요소와 TCP 취약점:
+
+1. 기밀성 (Confidentiality) 부족:
+┌─────────────────────────────────────────────────┐
+│ 문제점: 평문 전송                                │
+│ • 패킷 스니핑으로 데이터 노출                    │
+│ • 중간자 공격 (Man-in-the-Middle)               │
+│                                                 │
+│ 공격 예시:                                       │
+│ Client ──데이터──→ [공격자 스니핑] ──→ Server    │
+│ "사용자ID: admin, PW: 1234" 그대로 노출          │
+│                                                 │
+│ 대응: TLS/SSL 암호화 필수                        │
+└─────────────────────────────────────────────────┘
+
+2. 무결성 (Integrity) 부족:
+┌─────────────────────────────────────────────────┐
+│ 문제점: 신원 확인 불가                           │
+│ • IP 스푸핑 (IP Spoofing)                       │
+│ • 세션 하이재킹 (Session Hijacking)             │
+│                                                 │
+│ 공격 예시:                                       │
+│ 공격자가 Client IP(192.168.0.10)로 위장         │
+│ → Server가 정상 클라이언트로 오인                │
+│ → 권한 없는 접근 허용                            │
+│                                                 │
+│ 대응: 인증서 기반 상호 인증                      │
+└─────────────────────────────────────────────────┘
+
+3. 가용성 (Availability) 부족:
+┌─────────────────────────────────────────────────┐
+│ 문제점: 서비스 거부 공격 취약                    │
+│ • SYN Flooding Attack                           │
+│ • Connection Exhaustion                         │
+│                                                 │
+│ 공격 예시:                                       │
+│ 1초에 10,000개 SYN 패킷 전송                     │
+│ → 서버 연결 테이블 고갈 (65,535개 한계)          │
+│ → 정상 사용자 접속 불가                          │
+│                                                 │
+│ 대응: SYN Cookie, Rate Limiting                 │
+└─────────────────────────────────────────────────┘
+```
+
+## 결론
+
+```
+TCP 연결의 현실적 이해:
+
+핵심 교훈:
+┌─────────────────────────────────────────────────┐
+│ TCP 연결 ≠ 안전한 통신                           │
+│                                                 │
+│ TCP는 단순히 데이터 전달의 편의성을 제공하는     │
+│ 추상화 계층일 뿐, 실제 보안과 안정성은           │
+│ 상위 계층에서 별도로 보장해야 함                 │
+│                                                 │
+│ "연결되었다" ≠ "안전하다"                        │
+│ "연결되었다" ≠ "신뢰할 수 있다"                  │
+└─────────────────────────────────────────────────┘
+```
+
+이러한 **TCP 연결의 한계와 보안 취약점**을 이해하면 **방어적 프로그래밍과 다층 보안 설계**의 중요성을 깨닫고, **안전하고 신뢰성 있는 네트워크 애플리케이션**을 구축할 수 있습니다.
