--- a/docs/4.네트워크응용/1.네워크장치구조/4.Proxy.md
+++ b/docs/4.네트워크응용/1.네워크장치구조/4.Proxy.md
@@ -538,3 +538,360 @@ IPS (Intrusion Prevention System):
 ```
 
 이러한 **기업 환경의 프록시 시스템**을 통해 **조직은 보안을 강화하고 내부 활동을 모니터링**할 수 있지만, 동시에 **직원 프라이버시와 업무 효율성 간의 균형**을 고려해야 합니다.
+
+
+# Proxy 구조 (서버 보호)
+
+## Reverse Proxy 개념
+
+**지금까지 앞서 우회와, 보호 및 감시의 역할의 프록시는 클라이언트 관점에서의 프록시 서버였다. 정반대로 Reverse Proxy라고 서버 보호 목적의 프록시 서버가 있다**.
+
+```
+192.168.0.10                                      
+             PC ──→ 라우터  ──→ 인터넷 
+                                │
+                                라우터─── IPS 
+                                           │
+                                          SSL ── WAF ── Web Server 10.10.10.20   
+                                      Accelerator
+                                       5.5.5.5
+                                        < Reverse Proxy   >    
+                                        
+      Connection #1: PC ────── SSL    
+      Connection #2: SSL ────── Proxy
+      Connection #3: 웹서버 ────── Proxy`
+```
+
+```
+
+Forward Proxy vs Reverse Proxy:
+
+Forward Proxy (클라이언트 대리):
+┌─────────────────────────────────────────────────┐
+│ [클라이언트] ──→ [Forward Proxy] ──→ [서버]      │
+│                                                 │
+│ 목적:                                           │
+│ • 클라이언트 보호/감시                          │
+│ • 접근 제어                                     │
+│ • 캐싱 및 성능 향상                             │
+│ • 익명성 제공                                   │
+│                                                 │
+│ 클라이언트가 프록시 설정 필요                   │
+│ 서버는 프록시 존재 인식 못함                    │
+└─────────────────────────────────────────────────┘
+
+Reverse Proxy (서버 대리):
+┌─────────────────────────────────────────────────┐
+│ [클라이언트] ──→ [Reverse Proxy] ──→ [서버]      │
+│                                                 │
+│ 목적:                                           │
+│ • 서버 보호                                     │
+│ • 로드 밸런싱                                   │
+│ • SSL 터미네이션                               │
+│ • 보안 검사                                     │
+│                                                 │
+│ 클라이언트는 프록시 존재 인식 못함              │
+│ 서버 앞단에서 요청 처리                         │
+└─────────────────────────────────────────────────┘`
+```
+
+## 다층 보안 구조
+
+**만약 해커가 웹서버를 공격한다고 했을 때 이를 막기 위해서 보안 체계를 구성할 때 2중, 3중으로 구성되어 있다**.
+
+**그래서 가장 서버 앞쪽에 IPS 같은 장치가 패킷들을 분석하고 이 패킷이 공격인지 아닌지를 1차적으로 판단한다**.
+
+**그래서 정책적으로 IP 대역대 확인과 같은 L4 이하 수준에서 통제를 한다. 그다음에 패킷에 DPI도 실시해 가지고 시그니처 검색 등을 통해 방어한다**.
+
+```
+다층 보안 아키텍처 (Defense in Depth):
+
+1단계: 네트워크 경계 보안
+┌─────────────────────────────────────────────────┐
+│ IPS (Intrusion Prevention System):             │
+│ • 악성 IP 차단                                  │
+│ • DDoS 공격 방어                               │
+│ • 포트 스캔 탐지                                │
+│ • 프로토콜 이상 탐지                            │
+│                                                 │
+│ 처리 레벨: L3-L4 (패킷 헤더)                   │
+│ 장점: 빠른 처리, 모든 프로토콜 지원             │
+│ 단점: 암호화된 트래픽 분석 제한                 │
+└─────────────────────────────────────────────────┘
+
+2단계: SSL/TLS 터미네이션
+┌─────────────────────────────────────────────────┐
+│ SSL Accelerator/Load Balancer:                 │
+│ • HTTPS 트래픽 복호화                          │
+│ • 인증서 관리                                   │
+│ • 암호화 연산 오프로드                          │
+│ • 세션 관리                                     │
+│                                                 │
+│ 이점:                                           │
+│ • 웹서버 부하 감소                              │
+│ • 후단 보안 장비에서 평문 분석 가능             │
+│ • 인증서 중앙 관리                              │
+└─────────────────────────────────────────────────┘
+
+3단계: 웹 애플리케이션 보안
+┌─────────────────────────────────────────────────┐
+│ WAF (Web Application Firewall):                │
+│ • SQL Injection 방어                          │
+│ • XSS (Cross-Site Scripting) 차단             │
+│ • CSRF 공격 방지                               │
+│ • 파일 업로드 검사                              │
+│ • API 보안                                     │
+│                                                 │
+│ 처리 레벨: L7 (애플리케이션)                   │
+│ 장점: 웹 공격 전문 방어                        │
+│ 단점: 성능 오버헤드, 오탐 가능성               │
+└─────────────────────────────────────────────────┘
+
+4단계: 웹서버 자체 보안
+┌─────────────────────────────────────────────────┐
+│ Web Server (Apache, Nginx, IIS):               │
+│ • 서버 하드닝                                   │
+│ • 최소 권한 원칙                                │
+│ • 보안 패치 관리                                │
+│ • 로그 모니터링                                 │
+└─────────────────────────────────────────────────┘
+```
+
+## HTTPS와 암호화 문제
+
+근데 **요즘은 그냥 보내는 것이 아니라 암호화를 통해서 통신을 한다(HTTPS). 그러면 이때 문제가 발생하는데 IPS 같은 장치에서는 이를 확인할 수 없다. 그러다 보니까 이 웹서버인 것처럼 웹서버를 대신해서 작동하는 프록시 서버가 대표적으로 SSL 서버 같은 것이 있다. 보통 부하 분산 장치가 이를 해주기도 하고 아니면 웹 애플리케이션 방화벽이 하기도 한다**.
+
+```
+HTTPS 트래픽 처리 문제:
+
+암호화된 트래픽의 한계:
+┌─────────────────────────────────────────────────┐
+│ 클라이언트 ──→ [암호화된 HTTPS] ──→ 웹서버       │
+│                                                 │
+│ 중간 보안 장비가 볼 수 없는 것:                  │
+│ • HTTP 메서드 (GET, POST)                      │
+│ • URL 경로                                     │
+│ • HTTP 헤더                                    │
+│ • POST 데이터                                  │
+│ • 쿠키 정보                                     │
+│                                                 │
+│ 볼 수 있는 것:                                  │
+│ • IP 주소                                      │
+│ • 포트 번호                                     │
+│ • SNI (Server Name Indication)                │
+│ • 인증서 정보                                   │
+└─────────────────────────────────────────────────┘
+
+SSL 터미네이션 해결책:
+┌─────────────────────────────────────────────────┐
+│ 클라이언트 ──→ [SSL Proxy] ──→ [보안장비] ──→ 웹서버 │
+│               (복호화)         (평문분석)          │
+│                                                 │
+│ SSL Proxy 역할:                                │
+│ • 클라이언트와 SSL/TLS 핸드셰이크               │
+│ • 암호화된 트래픽 복호화                        │
+│ • 평문을 보안 장비로 전달                       │
+│ • 응답을 다시 암호화하여 클라이언트 전송        │
+│                                                 │
+│ 장점:                                           │
+│ • 모든 HTTP 트래픽 검사 가능                   │
+│ • 웹 공격 탐지/차단 가능                       │
+│ • 데이터 유출 방지                              │
+└─────────────────────────────────────────────────┘
+```
+
+## DNS 기반 트래픽 라우팅
+
+그래서 **만약에 클라이언트가 abc.com에 접속한다고 했을 때 이를 DNS에서 IP 주소를 받아온다. 이때 DNS에 실제 abc.com 서버의 진짜 IP 주소를 DNS에서 전달하는 것이 아니라 앞에 있는 프록시 서버 주소인 (5.5.5.5)를 알려준다**.
+
+```
+DNS 기반 Reverse Proxy 라우팅:
+
+일반적인 DNS 응답:
+┌─────────────────────────────────────────────────┐
+│ 클라이언트: abc.com의 IP는?                     │
+│ DNS 서버: 10.10.10.20 (실제 웹서버)            │
+│ 클라이언트 ──→ 10.10.10.20 (직접 접속)         │
+│                                                 │
+│ 문제점:                                         │
+│ • 웹서버 IP 노출                               │
+│ • 직접 공격 가능                                │
+│ • 보안 장비 우회                                │
+└─────────────────────────────────────────────────┘
+
+Reverse Proxy를 통한 DNS 응답:
+┌─────────────────────────────────────────────────┐
+│ 클라이언트: abc.com의 IP는?                     │
+│ DNS 서버: 5.5.5.5 (Reverse Proxy)             │
+│ 클라이언트 ──→ 5.5.5.5 ──→ 10.10.10.20        │
+│                                                 │
+│ 장점:                                           │
+│ • 실제 웹서버 IP 숨김                          │
+│ • 모든 트래픽이 보안 장비 경유                  │
+│ • 공격자가 실제 서버 직접 접근 불가             │
+└─────────────────────────────────────────────────┘
+
+고급 DNS 설정:
+┌─────────────────────────────────────────────────┐
+│ 지역별 분산:                                    │
+│ • 아시아: 5.5.5.5 (아시아 Reverse Proxy)       │
+│ • 유럽: 6.6.6.6 (유럽 Reverse Proxy)           │
+│ • 미국: 7.7.7.7 (미국 Reverse Proxy)           │
+│                                                 │
+│ 로드 밸런싱:                                    │
+│ • 라운드 로빈: 5.5.5.5, 5.5.5.6, 5.5.5.7      │
+│ • 가중치 기반: 70%, 20%, 10%                   │
+│ • 헬스 체크: 장애 시 자동 제외                  │
+└─────────────────────────────────────────────────┘
+```
+
+## SSL 터미네이션과 연결 흐름
+
+**클라이언트는 실제 5.5.5.5에 접속을 요청하지만 이 프록시 서버는 실제 웹서버가 아니기 때문에 실제 웹서버를 대리를 한다. 그래서 암호문을 풀어서 그 뒤에 평문 통신을 한다. 그래서 이 평문을 가지고 한 번 더 WAF에서 웹서버를 공격하는지 확인한 다음에 이 WAF 프록시 서버가 실제 웹서버와 통신을 한 다음에 그 응답값을 SSL 프록시에 전달하고 그 결과를 클라이언트 측에 보내는 방식**이다.
+
+```
+Reverse Proxy 연결 흐름:
+
+전체 통신 과정:
+┌─────────────────────────────────────────────────┐
+│ 1. DNS 조회                                     │
+│    클라이언트 ──→ DNS: abc.com?                 │
+│    DNS ──→ 클라이언트: 5.5.5.5                 │
+│                                                 │
+│ 2. SSL 연결 (Connection #1)                    │
+│    클라이언트 ──→ SSL Proxy (5.5.5.5)          │
+│    • TLS 핸드셰이크                            │
+│    • 인증서 검증                                │
+│    • 암호화 키 교환                             │
+│                                                 │
+│ 3. HTTP 요청 복호화                             │
+│    SSL Proxy: HTTPS → HTTP 변환                │
+│                                                 │
+│ 4. WAF 검사 (Connection #2)                    │
+│    SSL Proxy ──→ WAF: 평문 HTTP 전달           │
+│    WAF: SQL Injection, XSS 등 검사             │
+│                                                 │
+│ 5. 웹서버 전달 (Connection #3)                  │
+│    WAF ──→ Web Server (10.10.10.20)           │
+│    • 검사 통과한 요청만 전달                    │
+│                                                 │
+│ 6. 응답 경로                                    │
+│    Web Server ──→ WAF ──→ SSL Proxy ──→ 클라이언트 │
+│    • 응답 재암호화                              │
+│    • 클라이언트에 HTTPS 응답                    │
+└─────────────────────────────────────────────────┘
+
+보안 검사 포인트:
+┌─────────────────────────────────────────────────┐
+│ SSL Proxy에서:                                  │
+│ • 인증서 검증                                   │
+│ • TLS 버전 확인                                │
+│ • 암호화 스위트 검사                            │
+│                                                 │
+│ WAF에서:                                        │
+│ • HTTP 메서드 검증                             │
+│ • URL 패턴 분석                                │
+│ • 헤더 검사                                     │
+│ • POST 데이터 스캔                             │
+│ • 파일 업로드 검사                              │
+│ • 세션 관리                                     │
+│                                                 │
+│ 웹서버에서:                                     │
+│ • 애플리케이션 로직 보안                        │
+│ • 데이터베이스 접근 제어                        │
+│ • 서버 측 검증                                  │
+└─────────────────────────────────────────────────┘
+```
+
+## Reverse Proxy의 추가 기능
+
+그래서 **이런 식으로 서버 보호를 위해 격벽이 되어주는 프록시 서버를 Reverse Proxy 서버**라고 한다.
+
+```
+Reverse Proxy 고급 기능:
+
+로드 밸런싱:
+┌─────────────────────────────────────────────────┐
+│ 여러 백엔드 서버 관리:                          │
+│                                                 │
+│ Reverse Proxy (5.5.5.5)                       │
+│         │                                       │
+│    ┌────┼────┐                                  │
+│    │    │    │                                  │
+│ Web1  Web2  Web3                               │
+│ :80   :80   :80                                │
+│                                                 │
+│ 알고리즘:                                       │
+│ • 라운드 로빈: 순차적 분배                      │
+│ • 가중치: 서버 성능에 따라                      │
+│ • 최소 연결: 가장 적은 연결 서버               │
+│ • IP 해시: 클라이언트별 고정                   │
+└─────────────────────────────────────────────────┘
+
+헬스 체크:
+┌─────────────────────────────────────────────────┐
+│ 백엔드 서버 상태 모니터링:                      │
+│                                                 │
+│ HTTP 헬스 체크:                                │
+│ • GET /health → 200 OK                        │
+│ • 응답 시간 측정                                │
+│ • 주기적 확인 (30초마다)                       │
+│                                                 │
+│ TCP 헬스 체크:                                 │
+│ • 포트 연결 테스트                              │
+│ • 빠른 확인 가능                                │
+│                                                 │
+│ 장애 처리:                                      │
+│ • 응답 없는 서버 자동 제외                      │
+│ • 복구 시 자동 포함                             │
+│ • 관리자 알림                                   │
+└─────────────────────────────────────────────────┘
+
+캐싱:
+┌─────────────────────────────────────────────────┐
+│ 정적 콘텐츠 캐싱:                               │
+│ • 이미지, CSS, JS 파일                         │
+│ • HTML 페이지 (조건부)                         │
+│ • API 응답 (TTL 기반)                          │
+│                                                 │
+│ 캐시 전략:                                      │
+│ • Cache-Control 헤더 준수                      │
+│ • ETag 기반 재검증                             │
+│ • 조건부 GET 요청                              │
+│                                                 │
+│ 성능 향상:                                      │
+│ • 백엔드 서버 부하 감소                         │
+│ • 응답 시간 개선                                │
+│ • 대역폭 절약                                   │
+└─────────────────────────────────────────────────┘
+
+압축:
+┌─────────────────────────────────────────────────┐
+│ 응답 데이터 압축:                               │
+│ • gzip, deflate, brotli                        │
+│ • 텍스트 기반 콘텐츠 압축                       │
+│ • 클라이언트 지원 여부 확인                     │
+│                                                 │
+│ 이점:                                           │
+│ • 네트워크 대역폭 절약                          │
+│ • 페이지 로딩 시간 단축                         │
+│ • 모바일 환경 최적화                            │
+└─────────────────────────────────────────────────┘
+
+보안 헤더 추가:
+┌─────────────────────────────────────────────────┐
+│ 자동 보안 헤더 삽입:                            │
+│ • X-Frame-Options: DENY                        │
+│ • X-XSS-Protection: 1; mode=block              │
+│ • X-Content-Type-Options: nosniff              │
+│ • Strict-Transport-Security: max-age=31536000  │
+│ • Content-Security-Policy: ...                 │
+│                                                 │
+│ 백엔드 서버 정보 숨김:                          │
+│ • Server 헤더 제거/변경                        │
+│ • X-Powered-By 헤더 제거                       │
+│ • 에러 페이지 표준화                            │
+└─────────────────────────────────────────────────┘
+```
+
+이러한 **Reverse Proxy 구조**를 통해 **웹서버를 다양한 위협으로부터 보호**하고, **성능과 가용성을 향상**시킬 수 있습니다. 특히 **HTTPS 트래픽의 암호화 문제를 해결**하면서 **보안 검사를 수행**할 수 있다는 점이 핵심입니다.
